<resources>
    <string name="app_name">TrackingApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Редактирование профиля</string>
    <string name="your_name">Ваше имя:</string>
    <string name="hint_name">Иван</string>
    <string name="phone_number">Номер телефона:</string>
    <string name="hint_phone_number">+7(123)456–78–90</string>
    <string name="height">Рост:</string>
    <string name="none_hint">0</string>
    <string name="weight">Вес:</string>
    <string name="level_of_training">Ваш уровень подготовки:</string>
    <string name="health_status">Состояние вашего здоровья:</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="name_on_main">Здравствуйте, ИМЯ!</string>
    <string name="last_trip">Ваша последняя поездка:</string>
    <string name="A_to_B">Пункт А - Пункт В</string>
    <string name="long_">Длина:</string>
    <string name="duration">Длительность:</string>
    <string name="estimated_complexity">Оценочная сложность:</string>
    <string name="your_assessment">Ваша оценка:</string>
    <string name="final_difficulty">Итоговая сложность:</string>
    <string name="other_routes">Другие поездки:</string>
    <string name="editor_route">Редактор маршута</string>
    <string name="route_name">Название маршрута</string>
    <string name="departure">Отправление</string>
    <string name="arrival">Прибытие</string>
    <string name="map">Map</string>
    <string name="length">Длина:</string>
    <string name="complexity">Сложность:</string>
    <string name="workout">Тренировка</string>
    <string name="your_routes">Ваши маршруты:</string>
    <string name="choice_route">Выбранный маршрут:</string>
    <string name="create_new_route">Создать новый маршрут</string>
    <string name="one_of_us">Или выберете один из наших маршрутов:</string>
    <string name="text_A_visiblehint">Пункт A -</string>
    <string name="text_B_visiblehint">Пункт B</string>
    <string name="registration">Регистрация</string>
    <string name="route">Маршрут:</string>
    <string name="text_A_to_B_visiblehint">пункт А - пункт Б</string>
    <string name="your_geopos">Ваше местоположение</string>
    <string name="text_geopos_visiblehint">geoposition</string>
    <string name="pause">Пауза</string>
    <string name="end">Завершить</string>
    <string name="resume">Продолжить</string>
    <string name="profile">Профиль</string>
    <string name="text_name_surname_visiblehint">Name, surname</string>
    <string name="profile_data">Данные профиля</string>
    <string name="text_down_visiblehint">Низкий</string>
    <string name="records">Личные рекорды</string>
    <string name="date">Дата</string>
    <string name="route_end">Маршрут завершён</string>
    <string name="please">Пожалуйста,</string>
    <string name="rate_the_difficulty_level">оцените уровень сложности</string>
    <string name="for_you">для вас:</string>
    <string name="to_main">На главную</string>
    <string name="repeat_route">Повторить Маршрут</string>
    <string name="repeat_back">Повторить Обратно</string>
    <string name="delete_entry">Удалить запись</string>
    <string name="title">Название</string>
    <string name="start">Старт</string>
    <string name="edit_route">Редактировать маршрут</string>
    <string name="time_on_route">Примерное время в пути:</string>
    <string name="end_point_mark">Укажите конечную точку маршрута на карте</string>
    <string name="no_permision">Вы не выдали все нужные права приложению!</string>
    <string name="to_settings">В настройки</string>
    <string name="complexity_none">Неизвестно</string>
    <string name="Weight_warring">Пожалуста, указывайте вес в формате XXX.X или XX.X</string>
    <string name="Speed_now">Текущая скорость:</string>
    <string name="speed_font">0 km/h</string>

    <string-array name="level_choice_array">
        <item>Никогда не ездил</item>
        <item>Изредка катаюсь</item>
        <item>Ежедневно катаюсь</item>
        <item>Занимаюсь профессионально</item>
    </string-array>

    <string-array name="complexity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="health_choice_array">
        <item>Сильные ограничения</item>
        <item>Умеренные ограничения</item>
        <item>Без ограничений</item>
        <item>Идеальная физическая форма</item>
    </string-array>

</resources>