<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical">

    <TextView
        style="@style/title_fragment"
        android:text="@string/your_routes" />

    <TextView
        android:id="@+id/route_points"
        style="@style/title_fragment"
        android:layout_marginTop="40dp"
        android:text="@string/text_A_to_B_visiblehint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="150dp"
        android:text="@string/map"
        android:textColor="@color/nedodel_nado_pravit"
        android:textSize="35sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/estimated_complexity"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/route_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/none_hint"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/big_orange_button"
        android:layout_marginTop="70dp"
        android:text="@string/start" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/grey_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:text="@string/edit_route" />

</FrameLayout>