<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical">

    <TextView
        style="@style/title_fragment"
        android:text="@string/route" />

    <TextView
        android:id="@+id/route_points"
        style="@style/title_fragment"
        android:layout_marginTop="38dp"
        android:text="@string/text_A_to_B_visiblehint" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/title_fragment"
                android:text="Текущая скорость:" />

            <TextView
                android:id="@+id/route_speed"
                style="@style/title_fragment"
                android:layout_marginTop="2dp"
                android:text="Время в пути" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/user_speed"
                style="@style/title_fragment"
                android:text="0 km/h" />

            <TextView
                android:id="@+id/route_time"
                style="@style/title_fragment"
                android:text="0:0:0" />

        </LinearLayout>


    </LinearLayout>



    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="350dp"
        android:background="@drawable/map_shape" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pause_button"
        style="@style/big_orange_button"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="190dp"
        android:text="@string/pause" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/end_button"
        style="@style/big_orange_button"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:text="@string/end" />


</FrameLayout>