<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:layout_height="match_parent"
         android:layout_width="match_parent">

        <TextView
            android:text="@string/name_on_main"
            android:id="@+id/hello_and_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/title_fragment"/>

        <com.jjoe64.graphview.helper.GraphViewXML
            android:layout_marginTop="30dp"
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:seriesData="1=0"
            app:seriesType="bar"
            app:seriesColor="#000000" />

        <TextView
            style="@style/title_fragment"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/last_trip"
            android:textSize="18sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/pres_info"
            android:orientation="vertical">

            <TextView
                android:id="@+id/last_route"
                style="@style/text_for_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/A_to_B" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_for_stats"
                    android:layout_marginLeft="15dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/long_"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/route_length"
                    style="@style/text_for_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:gravity="right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="15dp"
                    android:text="@string/none_hint"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_for_stats"
                    android:layout_marginStart="15dp"
                    android:text="@string/duration"
                    android:layout_marginLeft="15dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/route_duration"
                    style="@style/text_for_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/none_hint"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_for_stats"
                    android:layout_marginLeft="15dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/estimated_complexity"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/route_estimated_complexity"
                    style="@style/text_for_stats"
                    android:layout_marginEnd="15dp"
                    android:text="@string/none_hint"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/text_for_stats"
                    android:layout_marginStart="15dp"
                    android:text="@string/your_assessment"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/route_user_rating"
                    style="@style/text_for_stats"
                    android:layout_marginEnd="15dp"
                    android:text="@string/none_hint"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/text_for_stats"
                    android:layout_marginStart="15dp"
                    android:text="@string/final_difficulty"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/route_average_rating"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/text_for_stats"
                    android:layout_marginEnd="15dp"
                    android:text="@string/none_hint"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/title_fragment"
            android:layout_marginTop="30dp"
            android:text="@string/other_routes"
            android:textSize="18sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/add"
            android:layout_below="@+id/search"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"

            app:layoutManager="LinearLayoutManager" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
